# poise-postgres-bot-template

./: .env.app.example  .env.db.example  .gitignore  Cargo.toml  Dockerfile.app  Dockerfile.db  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post_created.sh
.github/scripts/: create-manifest.sh
.github/workflows/: ci.yml  deploy.yml
db/sh/: init.sh
db/sql/: init.sql
locales/: messages.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000000_create_example_table.rs
src/: main.rs
src/commands/: ping.rs
src/errors/: mod.rs
src/infrastructure/database/: connection.rs
src/repository/: mod.rs
src/services/: mod.rs
