[package]
name = "discord_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.2"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "signal"] }
dotenv = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
migration = { path = "./migration" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
test-log = { version = "0.2", features = ["trace"] }
serial_test = "3.4"
